[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helpers = { path = "../lib/helpers" }
types = { path = "../lib/types" }
tokio = { version = "1.21", features = ["full"] }
axum = { version = "0.5", features = ["ws"] }
serde = "1.0"
serde_derive = "1.0"
mungos = "0.2.24"
anyhow = "1.0"
thiserror = "1.0"
envy = "0.4"
dotenv = "0.15"