[package]
name = "monitor_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monitor_types = { path = "../lib/types" }
# monitor_types = "0.1.0"
clap = { version="4.0", features=["derive"] }
bollard = "0.13"
async_timing_util = "0.1.12"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"