[package]
name = "monitor_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
monitor_types.workspace = true
monitor_helpers.workspace = true
periphery_client.workspace = true
# external
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
uuid.workspace = true
anyhow.workspace = true
log.workspace = true
simple_logger.workspace = true
dotenv.workspace = true
envy.workspace = true
# mogh
async_timing_util.workspace = true
merge_config_files.workspace = true
parse_csl.workspace = true
termination_signal.workspace = true
resolver_api.workspace = true