[package]
name = "monitor_periphery"
version = "0.3.4"
edition = "2021"
authors = ["mbecker20 <becker.maxh@gmail.com>"]
description = "monitor periphery client"
license = "GPL-3.0-or-later"

[[bin]]
name = "periphery"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helpers = { package = "monitor_helpers", path = "../lib/helpers" }
types = { package = "monitor_types", path = "../lib/types" }
run_command = { version = "0.0.6", features = ["async_tokio"] }

tokio = { version = "1.28", features = ["full"] }
axum = { version = "0.6", features = ["ws"] }
tower = { version = "0.4", features = ["full"] }
clap = { version = "4.2", features = ["derive"] }
futures = "0.3"
dotenv = "0.15"
serde = "1.0"
serde_json = "1.0"
bollard = "0.14.0"
anyhow = "1.0"
envy = "0.4"
sysinfo = "0.29"
async_timing_util = "0.1.14"
svi = "0.1.4"
merge_config_files = "0.1.3"
parse_csl = "0.1.0"
