[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monitor_client = { path = "../lib/monitor_client" }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
envy = "0.4"
anyhow = "1.0"
dotenv = "0.15"
async_timing_util = "0.1.14"