[package]
name = "aws_ecr"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
aws-sdk-ecr.workspace = true
aws-config.workspace = true
tracing.workspace = true
anyhow.workspace = true