[package]
name = "axum_oauth2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["json"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
urlencoding = "2.1"
rand = "0.8"
jwt = "0.16"