[package]
name = "monitor_helpers"
version = "0.2.14"
edition = "2021"
authors = ["MoghTech"]
description = "helpers used as dependency for mogh tech monitor"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { package = "monitor_types", path = "../types" }
anyhow = "1.0"
axum = "0.6"
serde = "1.0"
serde_json = "1.0"
toml = "0.7"
rand = "0.8"
