[package]
name = "monitor_client"
version = "0.1.0"
edition = "2021"
authors = ["MoghTech"]
description = "types for the mogh tech monitor"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monitor_types = "0.1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"