[package]
name = "monitor_client"
version = "0.1.1"
edition = "2021"
authors = ["MoghTech"]
description = "a client to interact with the monitor system"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# monitor_types = "0.1.0"
monitor_types = { path = "../types" }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"