[package]
name = "periphery_client"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monitor_types.workspace = true
reqwest.workspace = true
anyhow.workspace = true
serde_json.workspace = true
log.workspace = true