[package]
name = "periphery_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monitor_client.workspace = true
monitor_periphery.workspace = true
reqwest.workspace = true
anyhow.workspace = true
serde_json.workspace = true
log.workspace = true
resolver_api.workspace = true
serror.workspace = true