[package]
name = "sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
monitor_client.workspace = true
#
partial_derive2.workspace = true
#
tracing.workspace = true
colored.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true