[package]
name = "monitor_types"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
diff-struct.workspace = true
typeshare.workspace = true
strum.workspace = true
strum_macros.workspace = true
async-trait.workspace = true
anyhow.workspace = true