[package]
name = "monitor_types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
diff-struct.workspace = true
typeshare.workspace = true
strum.workspace = true
strum_macros.workspace = true
async-trait.workspace = true
anyhow.workspace = true
bson.workspace = true
async_timing_util.workspace = true
resolver_api.workspace = true
derive_builder.workspace = true
bollard.workspace = true
partial_derive2.workspace = true
make_option.workspace = true