[package]
name = "monitor_client"
description = "Client for the monitor build and deployment system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mongo = ["dep:mongo_indexed"]

[dependencies]
# mogh
mongo_indexed = { workspace = true, optional = true }
derive_default_builder.workspace = true
derive_empty_traits.workspace = true
async_timing_util.workspace = true
partial_derive2.workspace = true
derive_variants.workspace = true
resolver_api.workspace = true
serror.workspace = true
# external
tokio-tungstenite.workspace = true
derive_builder.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
typeshare.workspace = true
futures.workspace = true
reqwest.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
strum.workspace = true
envy.workspace = true
uuid.workspace = true
clap.workspace = true
bson.workspace = true